# zcashmetro

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json
assets/: station.json
server/: .gitignore  Cargo.toml  README.md  grpc_connector.js  index.js  package-lock.json  package.json  test.js  test_gettx.js
server/database/: extra-setup.js  index.js
server/database/models/: tx.model.js
server/mempool-database/: db.sqlite
server/proto/: service.proto
server/src/: lib.rs
src/: http-common.js
src/objects/: npc.js  sign.js  tooltip.js  train.js
src/scenes/: LoadingScene.js  MainScene.js
